--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "salsify/ember-exclaim",
   "license": "MIT",
   "author": "Dan Freeman",
+  "homepage": "https://salsify.github.io/ember-exclaim",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -30,19 +31,23 @@
     "babel-eslint": "^8.2.2",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ace": "^1.3.1",
+    "ember-auto-import": "^1.3.0",
     "ember-cli": "~3.8.0",
+    "ember-cli-addon-docs": "^0.6.10",
+    "ember-cli-addon-docs-yuidoc": "^0.2.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-dependency-lint": "^1.0.3",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
-    "ember-cli-deploy-git": "^1.3.1",
+    "ember-cli-deploy-git": "^1.3.3",
+    "ember-cli-deploy-git-ci": "^1.0.1",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^2.1.0",
-    "ember-common-tags": "^0.1.2",
+    "common-tags": "^1.8.0",
     "ember-css-modules": "^0.7.10",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
