--- a/package.json
+++ b/package.json
@@ -18,28 +18,39 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.0.0"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "ember-botanist": "^1.0.1",
+    "ember-cli-babel": "^6.4.1",
+    "ember-cli-htmlbars": "^2.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "broccoli-asset-rev": "^2.4.5",
+    "ember-ace": "^0.1.2",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "2.13.1",
+    "ember-cli": "^2.13.2",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-dependency-lint": "^1.0.2",
     "ember-cli-eslint": "^3.0.0",
-    "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-common-tags": "^0.1.2",
+    "ember-css-modules": "^0.6.5",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-leadlight": "^0.1.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-native-dom-helpers": "^0.5.0",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.13.0",
+    "ember-source": "^2.13.3",
+    "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.4.1"
   },
   "engines": {
     "node": ">= 4"
