--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-exclaim",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "An addon allowing apps to expose declarative, JSON-configurable custom UIs backed by Ember components",
   "keywords": [
     "ember-addon"
@@ -40,6 +40,7 @@
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-node-assets": "^0.2.2",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
