--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-native-dom-helpers": "^0.5.0",
     "ember-resolver": "^4.0.0",
+    "ember-sinon": "^1.0.1",
     "ember-source": "^2.13.3",
     "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
