--- a/package.json
+++ b/package.json
@@ -14,52 +14,57 @@
   "repository": "salsify/ember-exclaim",
   "scripts": {
     "build": "ember build",
+    "lint:js": "eslint .",
     "start": "ember server",
     "test": "ember try:each"
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "ember-botanist": "^1.0.1",
-    "ember-cli-babel": "^6.4.1",
-    "ember-cli-htmlbars": "^2.0.1"
+    "ember-cli-babel": "^6.11.0",
+    "ember-cli-htmlbars": "^2.0.3"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ace": "^0.1.2",
+    "babel-eslint": "^8.2.2",
+    "broccoli-asset-rev": "^2.6.0",
+    "ember-ace": "^1.3.1",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^2.13.2",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-dependency-lint": "^1.0.2",
-    "ember-cli-deploy": "^1.0.1",
-    "ember-cli-deploy-build": "^1.1.0",
-    "ember-cli-deploy-git": "^1.1.1",
-    "ember-cli-eslint": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli": "^3.0.0",
+    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli-dependency-lint": "^1.0.3",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-git": "^1.3.1",
+    "ember-cli-eslint": "^4.2.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
+    "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-node-assets": "^0.2.2",
-    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-shims": "^1.1.0",
+    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.2",
     "ember-common-tags": "^0.1.2",
     "ember-css-modules": "^0.6.5",
-    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-leadlight": "^0.1.0",
     "ember-load-initializers": "^1.0.0",
-    "ember-native-dom-helpers": "^0.5.0",
-    "ember-resolver": "^4.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-resolver": "^4.5.0",
     "ember-sinon": "^1.0.1",
-    "ember-source": "^2.13.3",
-    "ember-truth-helpers": "^1.3.0",
-    "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.4.1"
+    "ember-source": "^3.0.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-truth-helpers": "^2.0.0",
+    "ember-try": "^0.2.23",
+    "ember-welcome-page": "^3.1.1",
+    "eslint-plugin-ember": "^5.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "loader.js": "^4.6.0"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
