--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "repository": "salsify/ember-exclaim",
   "scripts": {
     "build": "ember build",
-    "lint:js": "eslint .",
+    "lint:js": "eslint ./*.js addon addon-test-support app blueprints config lib server test-support tests",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -30,7 +31,7 @@
     "broccoli-asset-rev": "^2.6.0",
     "ember-ace": "^1.3.1",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^3.0.0",
+    "ember-cli": "~3.1.4",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-dependency-lint": "^1.0.3",
     "ember-cli-deploy": "^1.0.2",
@@ -54,7 +55,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.5.0",
     "ember-sinon": "^1.0.1",
-    "ember-source": "^3.0.0",
+    "ember-source": "~3.1.0",
     "ember-source-channel-url": "^1.0.1",
     "ember-truth-helpers": "^2.0.0",
     "ember-try": "^0.2.23",
