--- a/package.json
+++ b/package.json
@@ -5,66 +5,67 @@
   "keywords": [
     "ember-addon"
   ],
+  "repository": "salsify/ember-exclaim",
   "license": "MIT",
   "author": "Dan Freeman",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "salsify/ember-exclaim",
   "scripts": {
     "build": "ember build",
-    "lint:js": "eslint ./*.js addon addon-test-support app blueprints config lib server test-support tests",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
     "start": "ember server",
     "test": "ember test",
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "ember-botanist": "^1.0.1",
-    "ember-cli-babel": "^6.11.0",
-    "ember-cli-htmlbars": "^2.0.3"
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-htmlbars": "^3.0.0"
   },
   "devDependencies": {
+    "@ember/optional-features": "^0.6.3",
     "babel-eslint": "^8.2.2",
-    "broccoli-asset-rev": "^2.6.0",
+    "broccoli-asset-rev": "^2.7.0",
     "ember-ace": "^1.3.1",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.1.4",
-    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli": "~3.8.0",
+    "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-dependency-lint": "^1.0.3",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-deploy-git": "^1.3.1",
     "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.7.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-node-assets": "^0.2.2",
-    "ember-cli-qunit": "^4.3.2",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^2.1.0",
     "ember-common-tags": "^0.1.2",
     "ember-css-modules": "^0.7.10",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.5.0",
+    "ember-qunit": "^3.4.1",
+    "ember-resolver": "^5.0.1",
     "ember-sinon": "^1.0.1",
-    "ember-source": "~3.1.0",
-    "ember-source-channel-url": "^1.0.1",
+    "ember-source": "~3.8.0",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-template-lint": "^1.1.0",
     "ember-truth-helpers": "^2.0.0",
-    "ember-try": "^0.2.23",
+    "ember-try": "^1.0.0",
     "ember-welcome-page": "^3.1.1",
-    "eslint-plugin-ember": "^5.0.3",
-    "eslint-plugin-node": "^6.0.1",
-    "loader.js": "^4.6.0"
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.0"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
