--- a/package.json
+++ b/package.json
@@ -60,6 +60,15 @@
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.0"
   },
+  "resolutions": {
+    "eslint-utils": "^1.4.1",
+    "lodash": "^4.17.13",
+    "lodash.defaultsdeep": "^4.6.1",
+    "lodash.merge": "^4.6.2",
+    "lodash.template": "^4.5.0",
+    "mixin-deep": "^1.3.2",
+    "set-value": "^2.0.1"
+  },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
   },
