--- a/package.json
+++ b/package.json
@@ -18,20 +18,17 @@
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
-    "lint:js": "eslint . --cache --ext ts,js",
-    "lint:js:fix": "eslint . --fix --ext ts,js",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember server",
     "test": "npm-run-all lint test:*",
     "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each",
-    "prepack": "ember ts:precompile",
-    "postpack": "ember ts:clean"
+    "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
     "ember-botanist": "^1.0.1",
     "ember-cli-babel": "^7.26.3",
-    "ember-cli-htmlbars": "^5.7.1",
-    "ember-cli-typescript": "^4.2.1"
+    "ember-cli-htmlbars": "^5.7.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -39,30 +36,6 @@
     "@embroider/test-setup": "^0.37.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
-    "@types/ember-qunit": "^3.4.14",
-    "@types/ember-resolver": "^5.0.10",
-    "@types/ember__application": "^3.16.3",
-    "@types/ember__array": "^3.16.4",
-    "@types/ember__component": "^3.16.6",
-    "@types/ember__controller": "^3.16.6",
-    "@types/ember__debug": "^3.16.5",
-    "@types/ember__engine": "^3.16.3",
-    "@types/ember__error": "^3.16.1",
-    "@types/ember__object": "^3.12.6",
-    "@types/ember__polyfills": "^3.12.1",
-    "@types/ember__routing": "^3.16.15",
-    "@types/ember__runloop": "^3.16.3",
-    "@types/ember__service": "^3.16.1",
-    "@types/ember__string": "^3.16.3",
-    "@types/ember__template": "^3.16.1",
-    "@types/ember__test": "^3.16.1",
-    "@types/ember__test-helpers": "^2.0.2",
-    "@types/ember__utils": "^3.16.2",
-    "@types/htmlbars-inline-precompile": "^1.0.1",
-    "@types/qunit": "^2.11.2",
-    "@types/rsvp": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ace": "^1.3.1",
@@ -77,7 +50,6 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
-    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-common-tags": "^0.1.2",
     "ember-css-modules": "^1.2.1",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -101,8 +73,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "qunit": "^2.14.1",
-    "qunit-dom": "^1.6.0",
-    "typescript": "^4.4.3"
+    "qunit-dom": "^1.6.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
