--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
-    "ember-botanist": "^1.0.1",
+    "botanist": "^1.3.0",
     "ember-cli-babel": "^7.26.3",
     "ember-cli-htmlbars": "^5.7.1"
   },
