--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-exclaim",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "An addon allowing apps to expose declarative, JSON-configurable custom UIs backed by Ember components",
   "keywords": [
     "ember-addon"
@@ -26,7 +26,8 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
-    "ember-botanist": "^1.0.1",
+    "botanist": "^1.3.0",
+    "ember-auto-import": "^1.12.0",
     "ember-cli-babel": "^7.26.3",
     "ember-cli-htmlbars": "^5.7.1"
   },
@@ -39,7 +40,6 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ace": "^1.3.1",
-    "ember-auto-import": "^1.11.2",
     "ember-cli": "~3.26.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-dependency-lint": "^1.0.3",
