--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "common-tags": "^1.8.2",
     "ember-ace": "^1.3.1",
     "ember-cli": "~3.26.1",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -50,7 +51,6 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
-    "ember-common-tags": "^0.1.2",
     "ember-css-modules": "^1.2.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
@@ -63,6 +63,7 @@
     "ember-source": "~3.26.1",
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^3.2.0",
+    "ember-truth-helpers": "^3.1.1",
     "ember-try": "^1.4.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
@@ -84,5 +85,9 @@
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "demoURL": "https://salsify.github.io/ember-exclaim"
+  },
+  "volta": {
+    "node": "12.22.12",
+    "yarn": "1.22.19"
   }
 }
