--- a/playground-app/package.json
+++ b/playground-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test-app",
+  "name": "playground-app",
   "version": "0.0.0",
   "private": true,
-  "description": "Test app for ember-exclaim addon",
+  "description": "Playground app for ember-exclaim addon",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -27,17 +27,25 @@
     "@babel/plugin-proposal-decorators": "^7.22.5",
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.1.1",
-    "@ember/test-helpers": "^3.1.0",
-    "@embroider/test-setup": "^1.7.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "ace-builds": "^1.23.1",
+    "broccoli-asset-rev": "^3.0.0",
+    "common-tags": "^1.8.2",
     "concurrently": "^8.2.0",
+    "ember-ace": "^3.0.0",
     "ember-auto-import": "^2.6.3",
     "ember-cli": "~5.1.0",
     "ember-cli-babel": "^7.26.11",
+    "ember-cli-clean-css": "^2.0.0",
     "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-git": "^1.3.1",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-terser": "^4.0.2",
+    "ember-css-modules": "^2.0.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-exclaim": "*",
     "ember-load-initializers": "^2.1.2",
@@ -46,8 +54,8 @@
     "ember-qunit": "^7.0.0",
     "ember-resolver": "^10.1.1",
     "ember-source": "~5.1.1",
-    "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^5.11.0",
+    "ember-truth-helpers": "^3.1.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-ember": "^11.9.0",
