--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "concurrently 'npm:start:*' --restart-after 5000 --prefix-colors cyan,white,yellow",
     "start:addon": "yarn workspace ember-exclaim start -- --no-watch.clearScreen",
     "start:test-app": "yarn workspace test-app start",
-    "test": "yarn workspaces run test"
+    "test": "yarn workspace test-app test:ember"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
