--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Lint
-        run: yarn run lint
+        run: yarn lint
       - name: Run Tests
-        run: yarn run test
+        run: yarn test
 
   floating:
     name: 'Floating Dependencies'
