--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   push:
     # filtering branches here prevents duplicate builds from pull_request and push
     branches:
-      - master
+      - 'release-1.x'
       - 'v*'
     # always run CI for tags
     tags:
@@ -25,32 +25,10 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 16
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Lint
         run: yarn lint
       - name: Test
         run: yarn test:ember
-
-  test-try:
-    name: Ember Try
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        scenario:
-          - ember-lts-3.8
-          - ember-release
-          - ember-beta
-          - ember-canary
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v1
-      - name: Install Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 10
-      - name: Install Dependencies
-        run: yarn install --frozen-lockfile
-      - name: Try Scenario
-        run: yarn ember try:one ${{ matrix.scenario }}
