--- a/ember-exclaim/package.json
+++ b/ember-exclaim/package.json
@@ -22,36 +22,36 @@
     "lint": "concurrently 'npm:lint:*(!fix)' --names 'lint:'",
     "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
     "lint:hbs": "ember-template-lint . --no-error-on-unmatched-pattern",
-    "lint:js": "eslint . --cache",
     "lint:hbs:fix": "ember-template-lint . --fix --no-error-on-unmatched-pattern",
+    "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
+    "prepack": "rollup --config",
     "start": "rollup --config --watch",
-    "test": "echo 'A v2 addon does not have tests, run tests in test-app'",
-    "prepack": "rollup --config"
+    "test": "echo 'A v2 addon does not have tests, run tests in test-app'"
   },
   "dependencies": {
-    "@embroider/addon-shim": "^1.0.0",
-    "botanist": "^1.3.0"
+    "@embroider/addon-shim": "^1.8.7",
+    "botanist": "^1.3.0",
+    "decorator-transforms": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.20.13",
+    "@babel/core": "^7.23.6",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/runtime": "^7.17.0",
-    "@embroider/addon-dev": "^3.0.0",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "concurrently": "^8.0.1",
-    "ember-template-lint": "^5.7.3",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^11.6.0",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "rollup": "^3.21.8",
-    "rollup-plugin-copy": "^3.4.0"
+    "@embroider/addon-dev": "^4.1.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "babel-plugin-ember-template-compilation": "^2.2.1",
+    "concurrently": "^8.2.2",
+    "ember-template-lint": "^5.13.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-ember": "^11.12.0",
+    "eslint-plugin-n": "^16.4.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.1",
+    "prettier-plugin-ember-template-tag": "^1.1.0",
+    "rollup": "^4.9.1",
+    "rollup-plugin-copy": "^3.5.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
