--- a/ember-exclaim/package.json
+++ b/ember-exclaim/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "@embroider/addon-shim": "^1.8.7",
     "botanist": "^1.3.0",
-    "decorator-transforms": "^1.0.1"
+    "decorator-transforms": "^1.0.1",
+    "tracked-built-ins": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
