Add type declarations for public APIs

--- a/ember-exclaim/.gitignore
+++ b/ember-exclaim/.gitignore
@@ -5,6 +5,7 @@
 /LICENSE.md
 # Build output
 /dist/
-/declarations/
+# We don't ignore declarations as they're currently hand-written.
+# /declarations/
 # npm/pnpm/yarn pack output
 *.tgz
