--- a/ember-exclaim/package.json
+++ b/ember-exclaim/package.json
@@ -35,11 +35,15 @@
     "decorator-transforms": "^1.0.1",
     "tracked-built-ins": "^3.3.0"
   },
+  "peerDependencies": {
+    "@glint/template": "^1.3.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/runtime": "^7.17.0",
     "@embroider/addon-dev": "^4.1.0",
+    "@glint/template": "^1.3.0",
     "@rollup/plugin-babel": "^6.0.4",
     "babel-plugin-ember-template-compilation": "^2.2.1",
     "concurrently": "^8.2.2",
@@ -73,9 +77,22 @@
       "./components/exclaim-ui.js": "./dist/_app_/components/exclaim-ui.js"
     }
   },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "declarations/*"
+      ]
+    }
+  },
   "exports": {
-    ".": "./dist/index.js",
-    "./*": "./dist/*.js",
+    ".": {
+      "types": "./declarations/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./declarations/*.d.ts",
+      "default": "./dist/*.js"
+    },
     "./addon-main.js": "./addon-main.cjs"
   }
 }
