--- a/ember-exclaim/package.json
+++ b/ember-exclaim/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.8.7",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
     "botanist": "^1.3.0",
     "decorator-transforms": "^1.0.1",
     "tracked-built-ins": "^3.3.0"
